--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "certbot": "^5.0.3",
     "express": "^4.21.0",
     "express-gateway": "^0.0.1",
+    "express-rate-limit": "^7.4.1",
     "fs": "^0.0.1-security",
     "https": "^1.0.0",
     "jsonwebtoken": "^9.0.2"
